Moved "Found By" to the left on entity cards, under entity's avatar; Fixed UserCollectionPresenter not showing alternative types

--- a/app/assets/stylesheets/common/card.css.scss
+++ b/app/assets/stylesheets/common/card.css.scss
@@ -351,8 +351,7 @@ div.card-item {
       }
     }
     div.owner-pic {
-      width: 100%; // 8em;
-      // margin: 1em;
+      width: 60%;
     }
     td.lower-content {
       padding-bottom: 0.3em;
